fixes to social log in buttons and overall layout on mobile

--- a/client/assets/css/pages/page-login.styl
+++ b/client/assets/css/pages/page-login.styl
@@ -4,17 +4,22 @@
 *
 --------------------------------------------------------------------*/
 
-.page-login
+@media screen and (min-width: 48em)
 
-  .container-fluid
-    height: 75vh
-    
-  .row
-    height: 100%
+  .page-login
+
+    .container-fluid
+      height: 75vh
+      
+    .row
+      height: 100%
     
 @media screen and (max-width: 48em)
 
   .page-login
+  
+    .login-form
+      margin-top: $ui-spacing
     
     .btn-secondary
       margin-bottom: $ui-spacing-third
